Disable it for just HA

--- a/kubernetes/apps/home-automation/home-assistant/app/secret-home-assistant.sops.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/app/secret-home-assistant.sops.yaml
@@ -5,54 +5,54 @@ metadata:
   name: home-assistant-secrets
 stringData:
   #
-  #ENC[AES256_GCM,data:fHvIUICpY7/hzZpKga7AgroQQJ5zCteDC/o=,iv:2BmZ7auCb8o4gKq7cYvC4X0Zk7l21jZYb+jVuuxUT/s=,tag:IjCmw+hTf2cppOTrBQMxnQ==,type:comment]
-  #ENC[AES256_GCM,data:BjrM0YqSdnh89ZILIDT1o50jWagr+pTiyw6JZZ4DUyGZ,iv:4Q4Yv8XW0EyiS9zzbzlNICYuRJga3cz14yq4p1O0fGU=,tag:hrM59p0Sqi9dwyDjBfOPEw==,type:comment]
-  SECRET_EXTERNAL_URL: ENC[AES256_GCM,data:Hqy7J4njP1mGW92PKHPEoCwYEjBg5U3YwvIZ8w==,iv:bU3OOFpakCQ4dF/43+M10IdFgbMeCnCYRdO5txmgqEI=,tag:yUSM4PyGBmZtmf+kTWyz2A==,type:str]
-  SECRET_TRUSTED_PROXIES_1: ENC[AES256_GCM,data:S/ByE/AjY51LqA==,iv:VuRWxByavzdFwqpe0XTH34eTVAadw7XxVcWfn8Pi3Rs=,tag:BGzc+3gH68l5eRVVGimH+w==,type:str]
+  #ENC[AES256_GCM,data:DBRCN1VdMdlM6HaPrASh5Tkat6wcMgmlNZc=,iv:8DxTuIkVVQUeLzzHsudhCHV88dxO8puZUvFIpts/FxQ=,tag:csZWue1BrhfudPhuSdF3WQ==,type:comment]
+  #ENC[AES256_GCM,data:ny6YDwHVXM3shewJC29zghxwLGQfnofc9BFyxAuX6BEu,iv:KbkY2P4ex2nOyQggloS1EJ/8/PjUHVjBK8dpAojJNfI=,tag:KjC63m/tP82HKivz13Kx7w==,type:comment]
+  SECRET_EXTERNAL_URL: ENC[AES256_GCM,data:6iIKHNXHoE80jSS5bdYssiZtC0ZczlXJfyrDVQ==,iv:cYn0VpDf1Bcih+8Dhgm0ETYGhkpdoy1536xWooUCGiM=,tag:5cOrszljx6ysR7qfDX+nmg==,type:str]
+  SECRET_TRUSTED_PROXIES_1: ENC[AES256_GCM,data:kj21D1nLTtOTdQ==,iv:qT3k0RfRhQHCvZseV0ROMQ150J5eFmdRmtksq4fkCy0=,tag:26iq+hnsFbVBwXIKmhhyxw==,type:str]
   #
-  SECRET_HARDWARE_DOMAIN: ENC[AES256_GCM,data:mKMwFL37XL0ADQCn+Z/g,iv:FatrnBHjCVCmoJh1AYrbp5zsPePGeGqn7Sw3WG1yk/4=,tag:KiSZn99/uKZY711jUD/y+A==,type:str]
+  SECRET_HARDWARE_DOMAIN: ENC[AES256_GCM,data:anrUfGgub3GxHCzDvcYi,iv:pLH2egYIKDAM2usljeqBHR8jtfZL4puBvCzoaEL9rXk=,tag:YLPRMiIhDaRD4yATiZICyw==,type:str]
   #
-  #ENC[AES256_GCM,data:AkyCxLRwPKByhu1HXYEiKRvtkLkLgJKX5zC09oI=,iv:YDD/XWok/SVWTCOPEB/mMugUWlQLqAjqu3Zs5j3yNuE=,tag:JZAO6eBMwt0cEek+MwWPUg==,type:comment]
+  #ENC[AES256_GCM,data:nim4/Jl9tyRAuHBSX1t/F7hS20wRfRFYmOkto1o=,iv:7WM1alzlRw/wqNP8XDYetpPmBuaUJEOgan0VX814Qw8=,tag:Rs5vdhT6Mh1wD1ePU9EngQ==,type:comment]
   #
-  SECRET_ZONE_HOME_HOUSE_NUMBER: ENC[AES256_GCM,data:4O7bDdw=,iv:LaMZNZN9hvD/+qQmSs8k5Izx4y8IGCXmXJzNFlaUydg=,tag:lDP0fxibdRjTV/v238JY0Q==,type:str]
-  SECRET_ZONE_HOME_POSTAL_CODE: ENC[AES256_GCM,data:jAII6aU=,iv:gumVzWhbj/0RINUzQoiiAyTr7Cc6LHeXUz+3v8qZ2rA=,tag:vP/lXiNnlJha4GAf5UlZxg==,type:str]
-  SECRET_ZONE_HOME_ELEVATION: ENC[AES256_GCM,data:rpU=,iv:kHYELtA6AEkgwIE7R6Rw5ytjImo0CLOFHKRwdv2NXBc=,tag:V/TRQoBW0KC1PBgclJZ8KA==,type:str]
-  SECRET_ZONE_HOME_LATITUDE: ENC[AES256_GCM,data:x3h7n9dhqG0sfS0Cp6AFy6kM,iv:Hz7840/v8XelESETmm0Gd7ay2s3tlPbD1HxmL9L0zlo=,tag:+vq48V3XaZqobntDB3F2eg==,type:str]
-  SECRET_ZONE_HOME_LONGITUDE: ENC[AES256_GCM,data:tCQOUhAioIfCg1Rf+LzRYveD,iv:DWIxAIsyoDabCbfysuGw8jFsk2qzcLLfNJG0Pldmryc=,tag:NAZRUB9JFHyfGIMVboCEzg==,type:str]
-  SECRET_ZONE_WORK_LATITUDE: ENC[AES256_GCM,data:cM4m7a3BZn277X+gxWRraqE=,iv:9U2TfOIHyGOjXFPq3+w/qUjbdfmHvEp0Aujhv6Pb0G0=,tag:egHLv7xsSd159NJFs91ceA==,type:str]
-  SECRET_ZONE_WORK_LONGITUDE: ENC[AES256_GCM,data:H7/zGAKO/YyqCOVat8oOWMvUVw==,iv:84/7+u86x33CEq1mbl9bVHdKks6oXCZk/P/PsbupEH0=,tag:VQGH1tbkunp9Hyqj6WyP4Q==,type:str]
+  SECRET_ZONE_HOME_HOUSE_NUMBER: ENC[AES256_GCM,data:jcpIuNk=,iv:liAX4cZsnqs8SdM5O7M1Z58unAfn66Y2p5qO9ofK8cU=,tag:V8fTrIpu/+t0PhUUXlcRpA==,type:str]
+  SECRET_ZONE_HOME_POSTAL_CODE: ENC[AES256_GCM,data:EA3v7bg=,iv:p4YeH9J1czvRkivhdLq/RxsJ3Li45k/uRpqwTIOw5y4=,tag:uqjaIYAnTwZQA44N7OKV0A==,type:str]
+  SECRET_ZONE_HOME_ELEVATION: ENC[AES256_GCM,data:s/4=,iv:GM5JRd0wFGxajlCsdVCilWaD8aBvGwF2O6azyQgp9cE=,tag:AdsYr4OUWQEbEzS3nRGnzQ==,type:str]
+  SECRET_ZONE_HOME_LATITUDE: ENC[AES256_GCM,data:e5UpbcEZ6sjnFBZcfyE2ZiRZ,iv:LAzi6Hw/ZP2+v3Q2Afs/cWu86SArXe7tiJuZH4sbBNA=,tag:TcwsrJSYuJgF1OEWFVIsTQ==,type:str]
+  SECRET_ZONE_HOME_LONGITUDE: ENC[AES256_GCM,data:isdd10HvmsIeh/oVqKRKoEqT,iv:/q1b/UzLHw15cqN+L3UtWyeBMi3kqHtSG2Oxt2XWdF4=,tag:MBv/A4onPGDe1sptuHzDvQ==,type:str]
+  SECRET_ZONE_WORK_LATITUDE: ENC[AES256_GCM,data:GQKjfoKgxkc7eR3i1j5Uyk0=,iv:s6lJUQucYrTsHMxD3LQ2DHcCT1mOhdAPIOhaagw9Eag=,tag:3I3hc1YNemVxjACQtvXTng==,type:str]
+  SECRET_ZONE_WORK_LONGITUDE: ENC[AES256_GCM,data:PsD5ore/0iNdgevWwfaha/9VZw==,iv:dYG9LWKbNvhSzEDsH9wJgpIPjmC9X4SiSOphStr4Prw=,tag:hxk0Xfhiv+nHVVvBISwaGw==,type:str]
   #
-  SECRET_NEST_PROJECT_ID: ENC[AES256_GCM,data:zgJ3/7aK43tZno119pbWko4BZBfeUYiZcufUZYNbZ7Emjkc0,iv:CFRE8zZnfab12RFUalPXQezBHylgT29eEni4pVJBrbo=,tag:09NqWFXVJ5rGG+nbtgxiRg==,type:str]
-  SECRET_NEST_CLIENT_ID: ENC[AES256_GCM,data:ZOC1OWKhaoTz8cyBLgUnXXYkDJcGV3uNpdBfRIqjvxQ3a3gZNKugRZggUkDv4WdwNmZsR0DXSTDoFTy98svMXVWfz6DhYqfz,iv:Se22cnEuoPYKXXy9x3GA7XuOiBEXk0qSvkraUhMhWms=,tag:2GM+FD00NQGzjUKJJGUNog==,type:str]
-  SECRET_NEST_CLIENT_SECRET: ENC[AES256_GCM,data:6fiQcxklK7uZFCMaOr8wfv6aokhUUVc5R4vcfxzqVDHoBKw=,iv:+CLzGcGQvCbJE1hza4jZPVT2ogCWw1SM8iKVO7tXZ4Y=,tag:sktnhUqnhzuWY2TtjVVVTA==,type:str]
-  SECRET_NEST_SUBSCRIBER_ID: ENC[AES256_GCM,data:+SjtuvqfeCvEtq4yffuZEmUzxQVNTZIfD4ob/trgO8ffLRQmn8hmVQtxVB8Bx1TD34SHQ6L9NmKreHIUecxs8uTaUyPt,iv:85GrOZ64Iqb2sSo82AzAXFOVQUKOL2VC3k+ui1RLpxg=,tag:4zcm32eYrMK0QOLPmA1TQA==,type:str]
+  SECRET_NEST_PROJECT_ID: ENC[AES256_GCM,data:YR2zeN4HCxf5p1Xp1guO8DTkMzzB/n1kCBZl3bHP/zM4sGBI,iv:8lbXwqmvX58Q+Ce0FNSPDK6RPOHZfc1XG9aQPIniDNQ=,tag:uVxOuc+ynu6Xnt8+ubIL8Q==,type:str]
+  SECRET_NEST_CLIENT_ID: ENC[AES256_GCM,data:Pa6zc6dohTUwIbLo11h4LvCuHh1wfdQrpNHEG8Vp4uNge6Sh2WubK9rFHkgAgvGgMSnDfrbawqzzP46zWBlojXLYMOBGimuU,iv:77nOraqPYkVpp1eqkt2vuURYaRzQOprIhfVZEFb19mg=,tag:qMrz3xu1h2RSQjetL4WU+A==,type:str]
+  SECRET_NEST_CLIENT_SECRET: ENC[AES256_GCM,data:CV0FCl3D/7x3q5IAD/p5wzisCBab+UqznjCdy5zBk7c3IIA=,iv:69MmjHGSMjCSGw9MxU4EjddpOr6T20BI6UEf/NdRrf4=,tag:rBQ0SZnQlxYxUeyoabtuDw==,type:str]
+  SECRET_NEST_SUBSCRIBER_ID: ENC[AES256_GCM,data:GkFknyFncGBR/6HAyCu0CZX6xRX4LcgiOMZjB9EIMcLlXQGsQdWMeySLm5yTPAg/Ptp2n/W0/hOUfzqFLPvZ2nhQKgkc,iv:aG3a+qux4G1V26+3xN11aEI0s7vFqJBCU2FapIMpOvE=,tag:/45JmaXV3r0UQ46ODTFh8Q==,type:str]
   #
-  #ENC[AES256_GCM,data:wE/9jb7C260wiPV07CF+DYLK7kaX6U1PTl1K++uvexRt7WIg,iv:0VfLzn50FUTNo7Seg2rNi3HU0bzIjHOuZ4ecAio5ctU=,tag:CbHIBax3wC23wM1f9NpeeA==,type:comment]
-  #ENC[AES256_GCM,data:p6XHkpQvLBppvKgXl1kCjO1Ff5Pm5SbwTHwwOaFiJnEVBqHAWKD/vA==,iv:2AZcB+jTG03Qbs1MwyyXKS0Qodmzdphda9w+tSvZbi4=,tag:gj3htEokkIs3+86pXX+kNw==,type:comment]
+  #ENC[AES256_GCM,data:f5F/o/7iY6i/ymW5dwV+lgtqMSrtxsGGXZ6NfAD8U5Pdwu/y,iv:8Fv/SABdfq9A56M4XQNj5hbUyETdQRpTCE1SgddnfDw=,tag:TXChmr7jKiAkg3Q8JK2sdw==,type:comment]
+  #ENC[AES256_GCM,data:nOU2yuJcDENyfnZoTX5nyf2TIVQxQ1PhVMLuYS2JxK56t1tCIByqSQ==,iv:yyXaJz/EJaWi9IhZib+3S87W3Axmj0AKUZZj8pAo5w4=,tag:wEgvQq6fZQTLqCpOW23u7g==,type:comment]
   #
-  #ENC[AES256_GCM,data:CgeXF9fBOptU1UDYJG0oUy5UVTyS4AvO0giD3oY6Rw==,iv:i68xjbWuuLpDtqyamliaOPylg62yhhUmk1qE3fHkvPs=,tag:CmwhNbSmwrOKf25jfJa6aw==,type:comment]
-  #ENC[AES256_GCM,data:DX0/py24ogazIJzNPTO284iOQz/+ga+T1YAqRyFtRLkI624=,iv:dbAG4gaGgAF8LZ8UwURdtGRUhoJwyfZJ81xqU8tuGJw=,tag:Dq9xPHalziicT+SL3Pdifw==,type:comment]
+  #ENC[AES256_GCM,data:TKeSOBBS8jItNwUehp6d28S0ywsFnc6hmiKc5GWfDA==,iv:G0kyNW6uBZ3vcoiSNFNIHHTGeIYuSrT76N8yJW+30Ek=,tag:N3nvgB2eCc5p35Kk54IxrA==,type:comment]
+  #ENC[AES256_GCM,data:5opBrDx58mvGRO23pOQOzGucwMvwdq646yi5BYyyt2RHApU=,iv:6q+bBhiyB9qVh/VMxYUGoxMzeAZye6ga14CtMlik24k=,tag:9lJ9bbtZlXL5IRPXlbzhhA==,type:comment]
   #
-  #ENC[AES256_GCM,data:eCqb3ULPeQBYXQIfePWcqJZgf3Ateo/KpP9vE9B5gA==,iv:H1gt/XqZZE3mQrgobYX1mrSnDwpWJ0vxZ7h3I1h32yk=,tag:WM8oZBvhjzrC/SAHPlz5nw==,type:comment]
-  #ENC[AES256_GCM,data:Due7cCidJY0Rhzgv1tZiZdQ+ZHQDGAGOI7rKIUAieEziw3LgubFW621Ecg==,iv:zggEydoDOIRxGYCEzPA4iGf5I45bFGhMDKvGXQ9MfgU=,tag:mAuJa7eU75iQcG7vES6evg==,type:comment]
-  #ENC[AES256_GCM,data:c9GT4cwWKyC2YHpKj5DNFv5476gL1Iqc1d4gGW+ds84YFA==,iv:8Jj8PsxN8dwU5LgfuyQtxWQ/xDb8THjh0E3T6+XcDZ4=,tag:/BWJ9qTtNts7xFKISc0Xmw==,type:comment]
+  #ENC[AES256_GCM,data:aanM3qP4zVg4bkHflxxbJzsVpN6pLSLGIlrcUDzhnQ==,iv:icEV16itrSSjDrkPdQM1vxg0c6BD6S2Mjkb3+xwJ5Vk=,tag:70IwWcRVUTpM48s44+4qGg==,type:comment]
+  #ENC[AES256_GCM,data:dA/TQBAOckQ212hJ1EfG8kNLb6qPANSfZuYaOj3hZcKRmnBN+oxt41K4XQ==,iv:sDKSqxmBjlv0X8QcCemiGMjUCUfPz6T/luAigHNrDcc=,tag:eSrDqFgcTeNtQ7bmOb1zmA==,type:comment]
+  #ENC[AES256_GCM,data:eujWW136LdNKGUDspgJDiXwt1Nd8PpoUZC+KgdLGjK/HyQ==,iv:zcxSl4t0nbLboTW7Ozsvr2fzhLQ7fgeJWtZozmnzX3k=,tag:qeGihlrzVaqdWLhr4leoIA==,type:comment]
   #
-  #ENC[AES256_GCM,data:AwC9m5KwZsiPjc7hH1iuCEgx73aB6HHx,iv:X93ODbmEYucvR+iVjutcQGgKMrr8A0pEbcrrX5anWOk=,tag:rvoxuJFxK/EyJgMgIQ90gw==,type:comment]
+  #ENC[AES256_GCM,data:A+Fz0rD0ZNmTiOvO1sTVRCYr9KGcPguv,iv:qgJWdoVRDRa5aEApTAWOWhb0YqalT2/8VnDLt0kRZFg=,tag:qLV+KTmCmBaWm1Ezt+ZqVQ==,type:comment]
   #
-  #ENC[AES256_GCM,data:hfd3nyTKCBIMWK5eobC1CDZ4QhsEmSzcmXdYt+D/y70=,iv:3KvZsu4P5F2QVXxbFT8hcM7lW59GCgkvTGIlKzDl5v4=,tag:hpWmnuzri+u6BLoaBh4ijg==,type:comment]
+  #ENC[AES256_GCM,data:TiOF2XsZw5ICVtt05qmoXi2DLM/8pq+qj689napm7fU=,iv:dGZbFOfJ9AAEqIqphO5N/nYZqGjPf8MP2uPXTQbtKcg=,tag:Rs6PQdmJKOT8raIhQSIwDg==,type:comment]
 sops:
   age:
     - recipient: age1qneprk3zf33h2kjfhmqnnf72kxkj9fplnnkmg26xwp9nx2njtfns2v9mte
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0YlZkMHB5YVVkdS9ublV5
-        NFNCbWFBSzYvREF2Nk9CLy9WSWFxeUhIRWtzCmNWZjJyK3VlSmRCaWVXTnhMZzFG
-        ckYwczFSbE1zUm92Vk1YeW9kQWx1dTQKLS0tIEJqenZhRGVINExGeXJEU0kzQ0ln
-        RUJKZGZBbFpCNEY4dWgyNW1lRHp4YmsKhHZgOM30ez4jbsckkdft6oFvHgn0sLUA
-        5tfVujM40yEoC82J2nsnK9jAUBRHqESxN9pnBkceei0gx2i3NDqWdQ==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIbVBvU2xxSXNhY1FuZitH
+        cWtFdXNzMHBWZVBPamFnNHRmVE1rNzhVK0dvCnpiVkF5REsxU1ROZ0wxZVp4eDBP
+        NVZzUnpWMHZOVmxFR1NYdzg3eG43MU0KLS0tIFVJMDYrVm5xOGRrS3JVN2svWG45
+        cThUcXdqNzhXcHIxSW9aUU16KzRBZFEKwejqm+8hTFybC6U+lcLonsUOCoLJHA+I
+        Dt1/IKKs7hSm5OD/fLWzCet8TljrPdODNYP+4FblpKr7BkqHv/8r4A==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-11-29T20:22:03Z"
-  mac: ENC[AES256_GCM,data:5907nmB+7xcobc97H1qtFNWh7KhssDxJiUzF0CC3s5EaJo97Gt3iA03KbfcnsAq3Q5OTV2DNTBL4esDYqAQPZPVLiaYuI1HjrPbxDpbIM/t9/py16l0ZO0ip/76LjidNaA8i7hJEGOGn8mKaPMH7mup/17ydj5QMFMoo/Eu7+KE=,iv:O6WVipwFkb3VSlFYnmxg1KdU1Fix1Pr26plbp3UCGRA=,tag:IVIUivtbVUX6uJDqezgIsg==,type:str]
+  lastmodified: "2025-11-29T20:57:32Z"
+  mac: ENC[AES256_GCM,data:MO0xjd4Mdk+bkRavPD4D/Yphozkk/1geItqL7wdoh7GQffBwB6V3iao+QFXOVYZevIesaykvs0EH4+LsCiLrHjuOWBUlX+3AjYeNzcbE//qtsNNTNKp+LlL0jr6ghWiW8kjYfRwYkfBgqC1E982CWX9VqdbLwGNE82sHrQdmVBA=,iv:eKUnz77a1T6iCWN8e3VQVTRApk6e3AOgvtNWP8qDzSk=,tag:oRq6IcAi7KeQWe4UsLTOPw==,type:str]
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
   version: 3.11.0
