--- a/kubernetes/components/sops/cluster-secrets.sops.yaml
+++ b/kubernetes/components/sops/cluster-secrets.sops.yaml
@@ -3,53 +3,53 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:g17IX93ODBY0voHTIlPS,iv:w5/7tf4119eY2AyiR25xbOmE0tnkgyaK7f0FvTHe01w=,tag:oeMDP2E41zmCB81ZT42mTg==,type:str]
-  #ENC[AES256_GCM,data:uE6SujcvZXdSwYMoBJAPb6H1beE=,iv:kLRIUfK68Ml25W3xdXoAa1s3Q0iPeKIbYy0Bba27cmA=,tag:sDMXiq20y2VmZXBrTviG8w==,type:comment]
-  CLOUDFLARE_AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:qdutl00krsTZ+JPIBP/4wzyRE+rHVGIH07sxE5+C7u4=,iv:B/+0PzMXpJ1pxNYp5cbMqfJ5epfGOwoGjupP2EDubRw=,tag:xv5JdKrvvf63XCukfzzwdw==,type:str]
-  CLOUDFLARE_AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:h2Lf9xfEt4v4NwIZqvkca1Gj62e9ORjALWVYK7+UOwW3JWSpbhLwTXRK9dyJt+v6EFz5GpDhaaPOUiLlqLuoWg==,iv:ZHeDNuDoqgKu/eoYoDBtCQOQzPS26g0qRY9oxKbj4X4=,tag:UP6iH+IVLkJgUxdeu+Yb4Q==,type:str]
-  CLOUDFLARE_RESTIC_REPO: ENC[AES256_GCM,data:YBXIMYoVAASVmVDQ7Qq7HbP/UWNofGFuSoKWZpnCMMV+ZLVWCZydJRFs5UXkXniMzPGOz4JEo0y1,iv:7YKXftPzJndJB17eLs+eDkqT/GpidX4rDfCy5QByI1M=,tag:BkrHoC4cKSzdCmF/34vapw==,type:str]
-  CLUSTER_NAME: ENC[AES256_GCM,data:4H/m9AiWUZHC,iv:MIk5d6FBvvPTGxifCvYZIEsV5TfdZeeVG6C4D1MiBds=,tag:fbBR0YVYVPmiPtg5gFjAyA==,type:str]
-  #ENC[AES256_GCM,data:DojoLuaiWcVxhl8FvRzUFQ==,iv:MRFBpYYurcEBp4BoSrTUa7VYwK7dYlQgcW+vtKqse4M=,tag:+0fKwtiy8WTjzfm3AmJGYw==,type:comment]
-  RESTIC_PASSWORD: ENC[AES256_GCM,data:gh/FOd8dHt2+lA==,iv:Z4d/ezW9raMi17XrGgmeqJSeSm9bl7jpTlgrr1BpM78=,tag:hBq01+rC7X19VQ6Pg08WXA==,type:str]
-  AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:92FWzwi++CO8esEJAyUciXDiMCU=,iv:wKIvkX+0nfNG3/IiaXQpk4196Rv29iJ6tNGqs8Pp1Mo=,tag:KtZ3pog5IqK2RFfaVbkBfw==,type:str]
-  AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:eRDDH11Xpl03QtMNLc3dFJ8yf6N1gM6y756rBp/oW5CEj9WfgVO2Zg==,iv:LXW6nJ87+dxR6dvajdPBHYaRj/NUbBnuatB4y5es+6k=,tag:zXXAcC2WNij7t3quWXOPjA==,type:str]
-  #ENC[AES256_GCM,data:1XnqxcYCmLoC,iv:aHbsZL+Z6WKoF9CJpo2GI/q/qtMFW+ETWZ2OgkHnWbg=,tag:0esioPLiaKEOMRhSm1Ktag==,type:comment]
-  NETWORK_BGP_SVC_CIDR: ENC[AES256_GCM,data:NQqFsNUJMiN9cbbG74Y=,iv:XoCnXuLplD+xDDeSJMkUI54udz+fkxSDg3pZ8lLCLD4=,tag:2z/4e4/JmlgmdBnNuMSB3w==,type:str]
-  NETWORK_K8S_POD_CIDR: ENC[AES256_GCM,data:aKsSDDJAxzRI9mW1,iv:My1+HkWkDJQ+xyFlTuih3lDGDk7CWHFpbGrVacL3+LA=,tag:chOBMeZa36GN4sEYmmXRAg==,type:str]
-  #ENC[AES256_GCM,data:gzJAz4buR7lmt9TBD0hxt/hR,iv:GdysbyFoYNUgomPWHrqAVK7UMkSlOC+Fqo6FuZcQt0k=,tag:IQF5lPMsJVdGgB1RpK8X2g==,type:comment]
-  #ENC[AES256_GCM,data:kHagjJt2rXjFFcRYbKk+l0j0S11jUx5ktk3o2yqO0730EU8=,iv:Qwv6dt4/NxdqMe14AcrXEg6RoTl1IqtWAk/+uDzKvfg=,tag:RSQW7j3Jgp7Nih/6iezWKg==,type:comment]
-  LB_K8S_ENDPOINT: ENC[AES256_GCM,data:bo+5ln8TSBcVoLo=,iv:RTVg2tdVBbbNGcQLKR9v4GmE+j7mEHrjRr5KUTtaV5A=,tag:6ZCipY4lXlCxz1/tnve4jQ==,type:str]
-  LB_GATEWAYAPI_EXTERNAL: ENC[AES256_GCM,data:HfLG1ptAbe6IK+0=,iv:MGJd6yeL0Sk82b3DvI0H6AtYz5SYu91be2v9QgrkOuw=,tag:NM91xJTszCgwqKruRz/Y4Q==,type:str]
-  LB_GATEWAYAPI_INTERNAL: ENC[AES256_GCM,data:DQNAwsT63kmgct8=,iv:KYOTWEnq0RhaiCIaQ1uZeWX/NviulVcrD7MV1A5Pbos=,tag:H1/KLj8u6Gy/DjrojZI/gA==,type:str]
-  LB_LLDAP: ENC[AES256_GCM,data:ewvz/koriupstjY=,iv:XUl+fxHNZzIQxbWyZxwPWBN1i+7y9KCSNpNjwNCpMSY=,tag:cxrJvJZnb3lfpeXyHhsjJg==,type:str]
-  #ENC[AES256_GCM,data:gkYraMgx0JqvScd2wIn2SJki64XYYobapHj27zA=,iv:uQDGuqosXx659HZNAyO/JhBLX72zzw4kHyWG7zBSHhk=,tag:d9Xpq2Jw7rF1/j5vCAlUCQ==,type:comment]
-  LB_KAS: ENC[AES256_GCM,data:LoHgwZ5yvsB27cI=,iv:c3/rdVYEYYWHOScQdgqOFMay5Q2vlLKAdR75ywRwBYM=,tag:Z7Xm/dowd4KcReyG5K6EuQ==,type:str]
-  LB_PLEX: ENC[AES256_GCM,data:CQPGhWd4bFQNO1g=,iv:W6vGfGVPlgZJRbOexINKYTXSBlkdiseYBOcCqau7p6o=,tag:tqnp5syx3A2/xtTWBDOhkw==,type:str]
-  LB_K8S_GATEWAY: ENC[AES256_GCM,data:FWSTrDdeLi045zo=,iv:om4mza4KqOMy6prgfaVqYxtMZS9AwfBgZ88Hx9c7JcE=,tag:MQ0/tC7CzKFaC7f95or3xw==,type:str]
-  LB_HASS: ENC[AES256_GCM,data:bLL+IuyO1uLYe54=,iv:hdovtGyOsj5T3ER+5u2Lz+rKwStekGDGJz9StQz/hQg=,tag:w/g4IFUI7/C6I0ji/VKrgg==,type:str]
-  LB_INGRESS_EXTERNAL: ENC[AES256_GCM,data:DShhvg+Q/Nvv078=,iv:VgaQ9jwkTEEStUPP34wVXMY6h9U9Cq/jEk9IfZhALuk=,tag:HYgyXr2MwlBL8Upg95jkjw==,type:str]
-  LB_INGRESS_INTERNAL: ENC[AES256_GCM,data:bzUUVO4RfLPn448=,iv:y2mdMpzkQbmeP+IwzOLpJsvYq8HUQgt4AVd/OQ1Lphc=,tag:7eCScf2L2Gu9PpNTNy/aLw==,type:str]
-  #ENC[AES256_GCM,data:IwolYLutD3TMeAMTw/YU0g==,iv:XmTim6dTB63nVIu1TxfYHlhngK/5zuviZtE5wKXmTzs=,tag:xTJZvJnFu5uEXkYVsJJxtQ==,type:comment]
-  LB_CEPH_MONS: ENC[AES256_GCM,data:QSrNKqGuxVqo31M=,iv:FKe3ce0IxM3PHZuBMVc3QcI3NMYxNmn5HlOzLr+IdVA=,tag:XxAuDajylr3B/iCvdpO6Lw==,type:str]
-  LB_INGRESS_BACKUPS_BUCKET: ENC[AES256_GCM,data:Dcl8t2RbM2KCv0g=,iv:NEA5wokG/NvyipnHmnI2/YbPC37I/tbGkhliWuFDc8k=,tag:RbezLdrUKiUmJ8U5IEl++g==,type:str]
-  LB_HYPERHDR: ENC[AES256_GCM,data:2sBjsIl86lvK3s8=,iv:AUgEDte2wTPp75QNZuAT9ci+jBwWeVjroMSSPvBn/IA=,tag:5VmZCJXXpan0btxIST6Kbw==,type:str]
-  LB_MQTT: ENC[AES256_GCM,data:Q6P/YxFqsoG7+wQ=,iv:mIwqEed/WNN7vF0uR0Rgo0UbAkdZaxU3digWPs9ucwI=,tag:Y45tszfiZ8x2VIoinJxSQg==,type:str]
-  LB_CODER: ENC[AES256_GCM,data:DeaVPGbhMTN8eso=,iv:4HYaPjkC8JtDls3hLhy8/5szF6pc1U0gphc8nt43+Ew=,tag:gldM0MXTZKzhQ8zPRRVyGA==,type:str]
-  LB_FRIGATE: ENC[AES256_GCM,data:ncSOC0OX2AJNAN8=,iv:T4NkTZ5MNAcZOLDAIYeXgrW1iR3V7paJFbiRntEbvdw=,tag:VDO5XS/Rz7WYiFgkDnd0nQ==,type:str]
-  #ENC[AES256_GCM,data:s3+GAaRF8bQy3OU4dr8phGiwt/IA6wtuZZgE4fseijrlwqwc05S5sTDV,iv:CoylHKDWZ0D/UOyvXANAo+VIHtnlAUFVle9Zv9f/H1Q=,tag:8T2prA1Q1TIADhRVDQwCHA==,type:comment]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:FYJ/UBDPe+N/goGDgoaX,iv:ALg6VLE4hgO99rvtjaUrVRVyvYhY4VjB6yLgLE/4hV8=,tag:n9OdaLpqGa8yk2UBaHtRrg==,type:str]
+  #ENC[AES256_GCM,data:CM7bUsPA6zFnDjGbbt6CwcVkWi8=,iv:NCfTuKdEwD4puAKwziFjvL703iIOS86qpGvjNh7yL/c=,tag:Zmdk6sxJ5Bj3UkNboqi29A==,type:comment]
+  CLOUDFLARE_AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:EtzD1H+y145nF+g1R9eCwuGXCWn3IGD4iO4VJNLoI2A=,iv:0rwk4Q44vHhDjkedVHugvcqjZPexDu6DirwE7n1koZc=,tag:PKaKhzMLU49AFdooM0vmxQ==,type:str]
+  CLOUDFLARE_AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:AiLFbc5uFUWogN1i1xaIiJ5vsYPYRxn/9CxxnUARt9P1bRd8FOqZpQaIGLGbf20686PTPQU3+ytdNsSWQP5t3g==,iv:2KzhijOK9kEvJCC3JcZojRz2K4yWQBnlRUy0wYUT6Vo=,tag:yR7UxvqnjDco4fOGUk9bdg==,type:str]
+  CLOUDFLARE_RESTIC_REPO: ENC[AES256_GCM,data:9EbPY9iB217PCczqMyO743ggWfrojNxA3kHdp2b5a4GQM2Gf7ody67TQN7rDEvqhrMYv8I9vh2Ys,iv:GI9HtADMcfkpZwtuYOGlRQZ8m3qdeyml2rtIvRcGF1A=,tag:zXmIaqEix57pqKlxIfHIoQ==,type:str]
+  CLUSTER_NAME: ENC[AES256_GCM,data:AWGrOLmskBmj,iv:qjs+74Awjp1INiblNoRKjudF6gIxw89KG0lNVH3X7wU=,tag:XKiHUQRp8izXEfd7qEBkyg==,type:str]
+  #ENC[AES256_GCM,data:jrChJrVotwZomssx+KZM1Q==,iv:BgjAijsgpVml59UkWgm4tO8p9NUkJZ2/UB/l0BxhGik=,tag:D/Kz72jpvzSC9w9cKFr6qg==,type:comment]
+  RESTIC_PASSWORD: ENC[AES256_GCM,data:W9zp9EtT9irctw==,iv:fstRPGVIRzeSFAf8yYY2BbLy8OSconydjN83NWkuriA=,tag:5R7xPObqlBBeTTdgQMUeMA==,type:str]
+  AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:o9nS1pNQhH5yV2eQKVsTFvBeV9I=,iv:62tU3/7O5cXggqVpzGngiMEQOXyKryIGR9POtHYDFpw=,tag:S+70+F+9UgsPKFa8jWCfqQ==,type:str]
+  AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:87MRHqFo1GOMmi69mYMIq1NoGr0FRpbYP85Mb3gQg+xCGLUpyK5X/Q==,iv:pCfbe+Uyo8SRXCfbsshoKnEeWJdqBDeOSoS+4kA/GRg=,tag:2YrdUKYDQfbOB9DAEZoekg==,type:str]
+  #ENC[AES256_GCM,data:NYMkXXY14e1f,iv:Qp/yHM+gPf3nKO59wNoPGN8GmQ7CYyp4cRt84aUD1rY=,tag:PJ91oDirj5phNZUImqFwXw==,type:comment]
+  NETWORK_BGP_SVC_CIDR: ENC[AES256_GCM,data:J/uw3bGrlzNGyYtKULw=,iv:8TW2errzH5q5/H2GfO6u4mmyRh76qVS/213luLfWY0w=,tag:g7asd+7U4npSmw0wceNGww==,type:str]
+  NETWORK_K8S_POD_CIDR: ENC[AES256_GCM,data:JRqFAAmb6XTSj+as,iv:BQr6zBiWg5M86px2m86Qj7JoUH0v+CjiyhEIoZQeaLQ=,tag:dMujTliM0bFWeTdwKiQ92g==,type:str]
+  #ENC[AES256_GCM,data:E2ZVgNjoEbG2bd+pfBmRqq4I,iv:XxiY7pLy6/odZWh9LvHbIEwC3DT+wncudSQpSVrOJ4M=,tag:f2xSiqa1lObGXBm9ti1tFA==,type:comment]
+  #ENC[AES256_GCM,data:ISieoYYtLFsNXv7HG4q8fMOiOY6riKzpwq6i520pyd1dQUw=,iv:cXArnXLz0kyFhCy/0cQX9+teSJuNRHto3mJhgA30hNo=,tag:uvI+rZl1HwOJhwODa1L9jg==,type:comment]
+  LB_K8S_ENDPOINT: ENC[AES256_GCM,data:QnIBnQn2zSPHqR0=,iv:DbMyIUqWqUYLtGbsUtsEK6fZ/nwVOGGIixnVocH1wME=,tag:HKdxDen49Qqd8jwevatN9Q==,type:str]
+  LB_GATEWAYAPI_EXTERNAL: ENC[AES256_GCM,data:UXf22JjhHrfqPOQ=,iv:SQ7xizkSj6+NipwgHRFOAw1FOxrlfR5DJjM2daP5Fxo=,tag:3s5jWHt9kuEFrz9Q6XuMEA==,type:str]
+  LB_GATEWAYAPI_INTERNAL: ENC[AES256_GCM,data:LI7ZctXNTPd5HKA=,iv:vgnjRY0+ctLGcYjYAYpaMjC84dSRNtezeuJ9k/HzGdg=,tag:in7KuiNbHG9CCy8fGY5Yiw==,type:str]
+  LB_LLDAP: ENC[AES256_GCM,data:LntMJWucLeSrxQc=,iv:MdHVdfcB9ZV47NM8b7NpT8X2aTSyuE2Qr0nzrZ+dVog=,tag:Yd+2TL6RJGB97bGU+k1MZQ==,type:str]
+  #ENC[AES256_GCM,data:c+4z7ijYhGebsvfVvESvztNAMX3wgKKB2vHLTho=,iv:XZMHL1RgVjUjzOObEKOLRy1jc4jMB6i0eqMoUnX31aA=,tag:x5kG8Ad25yPF+YOIA/KuMg==,type:comment]
+  LB_KAS: ENC[AES256_GCM,data:2YgJI2Waa7pKlx4=,iv:csEmeXqbu2Zgk8U9bBpW7Lfj2Vnr2qzCYdaXS6jwE/4=,tag:weoojQNQfzuVx7mzq0H86Q==,type:str]
+  LB_PLEX: ENC[AES256_GCM,data:LhKoW9yfTlIj0jM=,iv:72QQPzu1nnxKejlMEwcabZcfRqxWboLGPJNkBV7nJg0=,tag:K1/N0btWbIGQ98Nda+FGvQ==,type:str]
+  LB_K8S_GATEWAY: ENC[AES256_GCM,data:DxVkgt1VX4Spq+M=,iv:QemVLNFUzVpOS0sSTeNqgf65mMTG/M0QPavLTBkTLdM=,tag:OZqF4hlvDF/cmsSPchRe8Q==,type:str]
+  LB_HASS: ENC[AES256_GCM,data:KAwyMTQmkqmzQys=,iv:fm+0AgM6iLihoqM4Sdmy59AgpeVmWxzx2qUbI//Z/DI=,tag:IM+2wmLRWq7qZoUes/KIUA==,type:str]
+  LB_INGRESS_EXTERNAL: ENC[AES256_GCM,data:/k5Vp0SWJ+r6DMQ=,iv:3t392KJtWSNVX5JeJ45qqmT/SgpxLazUjZS9AFojRS8=,tag:zVeKHuPU9OOK3A8mv8OMtg==,type:str]
+  LB_INGRESS_INTERNAL: ENC[AES256_GCM,data:kPygGQkNx05/Js4=,iv:ZNgwhgGEsmfEmhS8zhyFPsZ75MFUst5a1amrPowrzNo=,tag:C1H1kdmRzpLy8vMEhW5LZw==,type:str]
+  #ENC[AES256_GCM,data:oDywHBTManYhmT/2z/GAZw==,iv:lv7WEXuX3hYSFfFtONnL4+yR22bQreE37YsiOvbRIBg=,tag:dHsEct0ZaJM9D42G1y13Xw==,type:comment]
+  LB_CEPH_MONS: ENC[AES256_GCM,data:wAqBpsFO1jwD7oA=,iv:REulC2lrIfAuE78BxJUdfAEcLPsx79ItN/viFXO8d0s=,tag:VddDqo7YkBWpB57sYFPTyw==,type:str]
+  LB_INGRESS_BACKUPS_BUCKET: ENC[AES256_GCM,data:nUYWiNzAgnWA6Fg=,iv:pNgXVm5D6vY1zzfX0VG7VxTD58OYgWEMhHA6NPn9TfM=,tag:650QiUvVl/1FBPzTGUVADw==,type:str]
+  LB_HYPERHDR: ENC[AES256_GCM,data:7Yx2nw9NHa1XHzQ=,iv:Euv57QISPRQ02lom6cq2L1QZepC+AWxrK0MH/OdHF6E=,tag:u4HcGQa/vxLFZ/eJoiEreQ==,type:str]
+  LB_MQTT: ENC[AES256_GCM,data:bRkyt78dQHU4rbA=,iv:kLCnQDfaeQDXuj81S+BqH7itJU83WPdZIm77TJNuVjU=,tag:bqwJDYqt3uXvUED2VgL9gw==,type:str]
+  LB_CODER: ENC[AES256_GCM,data:OXTU1BDCgcBLYUs=,iv:5oLMCwr74rbLRzTddjXQrbWoqTxYqNrQjUvg7aIWKL8=,tag:inTkTOy0dsUvOBKAMusLxg==,type:str]
+  LB_FRIGATE: ENC[AES256_GCM,data:/5OHzYzb2KiRocw=,iv:rrfASfhRukVwCc0pOrEiSccyaa5Gq+3Sk1Eu6XxCb6k=,tag:8MeOIt8GRJ2uHiw2oahNsA==,type:str]
+  #ENC[AES256_GCM,data:lfdu4+/33hAu3n+h871HgK7DPxV/GWx9zAt1wCL16hL2Wz0Nb4tsJEPn,iv:aRqrRD5kFFdiPnIC9HcKDtg6TRuuseiX5gQYc+vndyw=,tag:HUhseijVuV/nhrrkmTzeLA==,type:comment]
 sops:
   age:
     - recipient: age1qneprk3zf33h2kjfhmqnnf72kxkj9fplnnkmg26xwp9nx2njtfns2v9mte
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArejBlSmpxR2I4Tm91Q0lS
-        UXBGVW1ZSnplSzhkeU82Z0Y0L0VyOWQycEM0CmNPclE0NVc3WHR0L1V0eFdCNDc5
-        VXlYTG1EZlFEVFNQblE3WThnV2dXcVkKLS0tIGVZR2NtaTFVR21BT0RZeE50UzVD
-        aktCbWg0NmZ1RzJybE5vblo0emJpdGMKxEj29jY4q4AjiyhLXlRE5ZGi2wUtht0Y
-        ytQV8NuTl5zCbVcOdFJt8RAlKYlZo9DLChsM/4CrZQ5mdoy43sMzmA==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxZmVHUjE3T3luVlNLMllV
+        OUVwZmV0V040emdIZ1kydjRSRHZwT3E4d0RjCm5RM1FLQ3JVWFpSOXZVWWpUUHpq
+        ZkZLUkRqUHh6UGNqZXRXa0VQcElBNkEKLS0tIHJKQmNsUEllWlV5bjVNeHlDQllZ
+        UXlzYTdZRkFvTzkwaFdYMDUvNFkvamMKooYAd/2aSFQg4N8jXRhk3Bv7jhi4Fhxm
+        oj/jgCRBB9kZtwNnqp/sTVSkvv9CGNFS0x5pCrTlfBFb831ye9CPLQ==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-11-29T20:57:51Z"
-  mac: ENC[AES256_GCM,data:u97EFhy4aqv2ODu4ha6290DP/9DTNrS6u1bDXipMyt6N9yWoZfh/ck54QXGuPQMFJBUnofTqiwVMm3lnjgOrn6K/KbDVmynWAtctCQtXy6+4/oNqCOQ5LoIleqyW6md0ETmwhsqmur0zzd3jpXycbbhjZ3rcwewMPFXj7xK0pgc=,iv:2AuLg8ph/JkXyx7cajzOA3Zx8j78XL21bKRtX6xhGVM=,tag:053g8AeVLqxHKvoyfWTx9w==,type:str]
+  lastmodified: "2025-11-30T02:53:17Z"
+  mac: ENC[AES256_GCM,data:fIpzM3cIHu/YYieQuc+vvtmwGc0BeuaVsVxHYG13WUrFDed7Bj1B5tXzwaeedIWfa4AotIn9hJbeHecGFWVMnzeW48FL9oAxDzSK7/ztJoK45O/3ZOTgtGx1u8gD2N6j7vmIqPMO8RXh2HyOEPz/Zfqbyja/vmwb6gK40aSM0Dc=,iv:lSh8qXiJZnS8buiH/3eh3AyckW14Sl3whDZrbvRy9mw=,tag:jmu8d91r53Ql7Bs2pmweqw==,type:str]
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
   version: 3.11.0
