--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -273,7 +273,7 @@ spec:
             codingChunks: 2
         metadataServer:
           activeCount: 1
-          activeStandby: true
+          activeStandby: false
           priorityClassName: system-cluster-critical
           placement:
             topologySpreadConstraints:
