--- a/kubernetes/apps/home-automation/kustomization.yaml
+++ b/kubernetes/apps/home-automation/kustomization.yaml
@@ -9,11 +9,9 @@ components:
 - ../../components/sops
 resources:
 - ./esphome/ks.yaml
-
 # - ./frigate/ks.yaml
 - ./home-assistant/ks.yaml
-# - ./hyperhdr/ks.yaml
+- ./hyperhdr/ks.yaml
 - ./mosquitto/ks.yaml
-
-# - ./wyoming-whisper/ks.yaml
-# - ./wyoming-piper/ks.yaml
+- ./wyoming-whisper/ks.yaml
+- ./wyoming-piper/ks.yaml
