--- a/kubernetes/apps/home-automation/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/app/helmrelease.yaml
@@ -127,7 +127,7 @@ spec:
         enabled: true
         existingClaim: ${VOLSYNC_CLAIM}
       backup:
-        enabled: true
+        enabled: false
         existingClaim: ceph-filesystem-home-assistant-backups
         advancedMounts:
           home-assistant:
