--- a/kubernetes/apps/home-automation/kustomization.yaml
+++ b/kubernetes/apps/home-automation/kustomization.yaml
@@ -9,7 +9,7 @@ components:
 - ../../components/sops
 resources:
 - ./esphome/ks.yaml
-# - ./frigate/ks.yaml
+- ./frigate/ks.yaml
 - ./home-assistant/ks.yaml
 - ./hyperhdr/ks.yaml
 - ./mosquitto/ks.yaml
