--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -11,7 +11,7 @@ components:
 # resources:
 # - ./autopulse/ks.yaml
 # - ./kometa/ks.yaml
-# - ./plex/ks.yaml
+- ./plex/ks.yaml
 
 # - ./plex-auto-languages/ks.yaml
 # - ./tautulli/ks.yaml
