--- a/kubernetes/apps/media/plex/ks.yaml
+++ b/kubernetes/apps/media/plex/ks.yaml
@@ -9,9 +9,9 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  components:
+  # components:
   # - ../../../../components/gatus/guarded
-  - ../../../../components/volsync
+  # - ../../../../components/volsync
   dependsOn:
   - name: rook-ceph-cluster
     namespace: rook-ceph
