--- a/kubernetes/components/cephfs-mounts/music-folder.yaml
+++ b/kubernetes/components/cephfs-mounts/music-folder.yaml
@@ -20,7 +20,7 @@ spec:
       # Required options from storageclass parameters need to be added in volumeAttributes
       "clusterID": "rook-ceph"
       "fsName": "ceph-filesystem"
-      "pool": "ceph-filesystem-ec-4-2"
+      "pool": "ceph-filesystem-erasurecoded"
       "staticVolume": "true"
       "rootPath": /volumes/media/Music
     # volumeHandle can be anything, need not to be same
