--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -10,8 +10,7 @@ components:
 
 resources:
 # - ./autopulse/ks.yaml
-# - ./kometa/ks.yaml
+- ./kometa/ks.yaml
 - ./plex/ks.yaml
-
 # - ./plex-auto-languages/ks.yaml
-# - ./tautulli/ks.yaml
+- ./tautulli/ks.yaml
