--- a/kubernetes/apps/downloads/kustomization.yaml
+++ b/kubernetes/apps/downloads/kustomization.yaml
@@ -8,14 +8,15 @@ components:
 - ../../components/repos/app-template
 - ../../components/sops
 
-# resources:
-#   - ./bazarr/ks.yaml
+resources:
+- ./bazarr/ks.yaml
 #   - ./coder/ks.yaml
 #   - ./lidarr/ks.yaml
 #   - ./maintainerr/ks.yaml
-#   - ./overseerr/ks.yaml
+- ./overseerr/ks.yaml
 #   - ./prowlarr/ks.yaml
 #   - ./radarr/ks.yaml
 #   - ./recyclarr/ks.yaml
-#   - ./sabnzbd/ks.yaml
+- ./sabnzbd/ks.yaml
+
 #   - ./sonarr/ks.yaml
