Fix default mode

--- a/kubernetes/apps/downloads/bazarr/app/helmrelease.yaml
+++ b/kubernetes/apps/downloads/bazarr/app/helmrelease.yaml
@@ -118,7 +118,7 @@ spec:
       scripts:
         type: configMap
         name: bazarr-scripts
-        defaultMode: 775
+        # defaultMode: 0775
         globalMounts:
         - readOnly: true
       tmp:
