--- a/kubernetes/apps/downloads/kustomization.yaml
+++ b/kubernetes/apps/downloads/kustomization.yaml
@@ -15,8 +15,7 @@ resources:
 #   - ./maintainerr/ks.yaml
 - ./overseerr/ks.yaml
 #   - ./prowlarr/ks.yaml
-#   - ./radarr/ks.yaml
+- ./radarr/ks.yaml
 #   - ./recyclarr/ks.yaml
 - ./sabnzbd/ks.yaml
-
-#   - ./sonarr/ks.yaml
+- ./sonarr/ks.yaml
