--- a/kubernetes/apps/downloads/kustomization.yaml
+++ b/kubernetes/apps/downloads/kustomization.yaml
@@ -14,7 +14,7 @@ resources:
 #   - ./lidarr/ks.yaml
 #   - ./maintainerr/ks.yaml
 - ./overseerr/ks.yaml
-#   - ./prowlarr/ks.yaml
+- ./prowlarr/ks.yaml
 - ./radarr/ks.yaml
 #   - ./recyclarr/ks.yaml
 - ./sabnzbd/ks.yaml
