--- a/kubernetes/apps/media/autopulse/app/secret.sops.yaml
+++ b/kubernetes/apps/media/autopulse/app/secret.sops.yaml
@@ -1,32 +1,28 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: autopulse-secret
+  name: autopulse-secret
 type: Opaque
 stringData:
-    AUTOPULSE__AUTH__USERNAME: ENC[AES256_GCM,data:QLF8OkyZbZA=,iv:Tq+BGm4ePSRMWowW7gSCyLy2lf5nkL0VmQtbY1VBpFE=,tag:G22NYCnVOcGs9B3G+SUZGw==,type:str]
-    AUTOPULSE__AUTH__PASSWORD: ENC[AES256_GCM,data:E0fI6K9gg+m3DQ==,iv:tbY0JrX2Lyj2LGlO3TdT9s5/3zjO1CBIu+Y1KOf5pHY=,tag:GdAeGD1vqj5HFHopzsc4ew==,type:str]
-    AUTOPULSE__TARGETS__PLEX__URL: ENC[AES256_GCM,data:3J1M2F0BpN5khIoB6dQx8rMiSp4Fb3l78EbqLA==,iv:FJj1zy+Rc5yNs/E9LL0CTJcO38Siw5SYuxm3Q/Jgjm4=,tag:LfVAFhk1nNL4QJCu9QExBg==,type:str]
-    AUTOPULSE__TARGETS__PLEX__TOKEN: ENC[AES256_GCM,data:5yqjFYnvawkjgpcN8Rfl/DizbEA=,iv:mH0e9a5NPzL4h11hbBpcJthvCiNr4UWRnoVLnMtel8U=,tag:MjVtsaRgYSlu2WPz0EMsIQ==,type:str]
-    FORCE_USERNAME: ENC[AES256_GCM,data:7ep6N4g5iwY=,iv:g74tQSVW/17RQBqT4ULAB/iS3ZugGA3IofDZcho1518=,tag:nKAAtTLYumnuXkJ4IYy02g==,type:str]
-    FORCE_PASSWORD: ENC[AES256_GCM,data:eJT0yk3oUWpfaw==,iv:e7zKr4363DOrl1lREeMH3AWRGAynUeXnLK8sph6tUwI=,tag:FqWmLlH80/ZjzWLAk3QLIQ==,type:str]
+  AUTOPULSE__AUTH__USERNAME: ENC[AES256_GCM,data:0KgwUQglC18=,iv:qiMm9lt3wDIcH0kfFuja2pcm+4/ovr+E9etwOl5xIJk=,tag:jt7hVKJKtLvdIOOqq92EkA==,type:str]
+  AUTOPULSE__AUTH__PASSWORD: ENC[AES256_GCM,data:sntMe75lZAVxcA==,iv:63exWLWfbveZieDQDponyezJ4XXGS4n9G4PmrJXZFM0=,tag:1lIWT+80d7vG2eRDRphaag==,type:str]
+  AUTOPULSE__TARGETS__PLEX__URL: ENC[AES256_GCM,data:mttXCi3P5AK/1eVFfSY8g5fJi5zAFYIpEsJXtg==,iv:GzOa+CSSn1/CYdqZphXjN81bmWaIPZXk5B0nDQmH+/k=,tag:LNjPj7Cq8z9L5m9bSAzYGw==,type:str]
+  AUTOPULSE__TARGETS__PLEX__TOKEN: ENC[AES256_GCM,data:ZOr2hzVCrBGf8dluVWN0lWc2NzE=,iv:PtjpeiGlBai7dXhHY2otug+Ic29LNJIm3/6ZNXWxWbs=,tag:LyIePL5M6PUXr8E3yvaTqQ==,type:str]
+  FORCE_USERNAME: ENC[AES256_GCM,data:CzSEZ6bT0SM=,iv:hpWOh4dA/Zu8Ltf4d8t/SEfR+PGrSEMwBzXg/flV4ik=,tag:Wf7bn97JnE4A2d+1fxn3FA==,type:str]
+  FORCE_PASSWORD: ENC[AES256_GCM,data:zNJiLcUbgrqfDA==,iv:kmHK/8KZ7ojvZ8GXl1QTRv21C4KTozfaIrtqCZR+s1Q=,tag:7Rz9EyglP1EQqMdd3lJ5sw==,type:str]
 sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
-    age:
-        - recipient: age1vx8dy8603amp9yuplkgvxaxu37y47d6myfw3urw55n7uazvqe9lsurpkxa
-          enc: |
-            -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvclVkcWJ1clFKcWlCNi9J
-            bGF0ZStRZDhLenA1Q01La1B0SXFXc0lEQkdvCi94YmkxYk9DdGRheDcrU3NXQVR1
-            SFY4UndXcE12OWVKSlhIazdYWGFiTEkKLS0tIFhoMlU0ZlpZcE0wMUFKV25ueGxP
-            MjVIazkwVWF2UkxiT1pGZ0lYakpOcjAKKocq88Cb7JmM0eTcfzuAiOBUv4Wihyjq
-            h4BpWRzN/1wkJM4qMUT4pRCQncidOP0kyaLWZlDsVgjKe3SMMUdTVA==
-            -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-04-11T01:20:56Z"
-    mac: ENC[AES256_GCM,data:EtzvgxmZ/LnsCuzZp0iusee9++gs9ZbEGVB8UzDKkYypqwsDuz3xFvXipJixYIz/SpWlFA5v7fXmqI9WWhj7f3NsGGlwN+XHIE6wmDgEHR0sOeBKuv+9v0UNU2466FSCj5IR3d144dL2sqLLgKHeNwabOV9Fc3Am3JsTTbVASnA=,iv:LqXoALyuoBevNlBdfA7JsFofVKM0goxl3NqNwLvW4I0=,tag:IXNt1eXgJ9aKWPX8PcgVaw==,type:str]
-    pgp: []
-    encrypted_regex: ((?i)(pass|secret($|[^N])|key|token|^data$|^stringData))
-    version: 3.8.1
+  age:
+    - recipient: age1qneprk3zf33h2kjfhmqnnf72kxkj9fplnnkmg26xwp9nx2njtfns2v9mte
+      enc: |
+        -----BEGIN AGE ENCRYPTED FILE-----
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWRzFvOGJPQkh0UjNHRENH
+        d2szL25qWTBBejJySktDWVBXcSsweitSTVNrCkRkU2t6RjR3Sy9sekYwNzkrQWFn
+        QXBRWlNSVjMvY3JkMlJST2REckhnY2cKLS0tIHB6ZzZ1Q2NjelZuQnlMSmZHZXlr
+        TmxWSkhjaU5Ga1psdUlpMWRhWEQwb28Kq2zFR6Nq685RJbZW6Yk37cyZc2c1MVt0
+        /Fr9AGrIfC44rDvK/KXAfds1X6rFhSlIlamsMB7ITfCs5WimlMZekA==
+        -----END AGE ENCRYPTED FILE-----
+  lastmodified: "2025-12-02T05:57:08Z"
+  mac: ENC[AES256_GCM,data:963jxDS/ctQKExq/JzHG4Y2MQQD1BaIo2AeMJU+N240bKdIhK05qjY9kYyUAJNdsDL3Fy1AbX4QvkVfieJ2BKtu5wzXFV3cvcr/iC9QzcPB8CK5yDAXVCyOUBpbpOZMf+ApQzjrFKtks4ZDkNGHempXGfIWvp5Ozug4siiir6S0=,iv:qjK5PCpdnPt+Vu+5joefEPdsOvgTxAId25Uw3y8+cEo=,tag:+w63oBaxvipEzlVARoqgJA==,type:str]
+  encrypted_regex: ^(data|stringData)$
+  mac_only_encrypted: true
+  version: 3.11.0
