--- a/kubernetes/apps/media/autopulse/app/helmrelease.yaml
+++ b/kubernetes/apps/media/autopulse/app/helmrelease.yaml
@@ -42,7 +42,7 @@ spec:
               repository: docker.io/danonline/autopulse
               tag: v1.4.0
             env:
-              TZ: ${TIMEZONE}
+              TZ: America/Los_Angeles
               # PUID: 1000
               # PGID: 1000
               AUTOPULSE__APP__DATABASE_URL: sqlite://data/database.db
@@ -69,7 +69,7 @@ spec:
               repository: docker.io/danonline/autopulse
               tag: ui-v1.3.1
             env:
-              TZ: ${TIMEZONE}
+              TZ: America/Los_Angeles
               # PUID: 1000
               # PGID: 1000
               FORCE_DEFAULT_SERVER_URL: true
