--- a/kubernetes/apps/downloads/kustomization.yaml
+++ b/kubernetes/apps/downloads/kustomization.yaml
@@ -10,7 +10,7 @@ components:
 
 resources:
 - ./bazarr/ks.yaml
-#   - ./coder/ks.yaml
+- ./coder/ks.yaml
 #   - ./lidarr/ks.yaml
 #   - ./maintainerr/ks.yaml
 - ./overseerr/ks.yaml
