--- a/kubernetes/apps/media/autopulse/app/secret.sops.yaml
+++ b/kubernetes/apps/media/autopulse/app/secret.sops.yaml
@@ -4,25 +4,24 @@ metadata:
   name: autopulse-secret
 type: Opaque
 stringData:
-  AUTOPULSE__AUTH__USERNAME: ENC[AES256_GCM,data:0KgwUQglC18=,iv:qiMm9lt3wDIcH0kfFuja2pcm+4/ovr+E9etwOl5xIJk=,tag:jt7hVKJKtLvdIOOqq92EkA==,type:str]
-  AUTOPULSE__AUTH__PASSWORD: ENC[AES256_GCM,data:sntMe75lZAVxcA==,iv:63exWLWfbveZieDQDponyezJ4XXGS4n9G4PmrJXZFM0=,tag:1lIWT+80d7vG2eRDRphaag==,type:str]
-  AUTOPULSE__TARGETS__PLEX__URL: ENC[AES256_GCM,data:mttXCi3P5AK/1eVFfSY8g5fJi5zAFYIpEsJXtg==,iv:GzOa+CSSn1/CYdqZphXjN81bmWaIPZXk5B0nDQmH+/k=,tag:LNjPj7Cq8z9L5m9bSAzYGw==,type:str]
-  AUTOPULSE__TARGETS__PLEX__TOKEN: ENC[AES256_GCM,data:ZOr2hzVCrBGf8dluVWN0lWc2NzE=,iv:PtjpeiGlBai7dXhHY2otug+Ic29LNJIm3/6ZNXWxWbs=,tag:LyIePL5M6PUXr8E3yvaTqQ==,type:str]
-  FORCE_USERNAME: ENC[AES256_GCM,data:CzSEZ6bT0SM=,iv:hpWOh4dA/Zu8Ltf4d8t/SEfR+PGrSEMwBzXg/flV4ik=,tag:Wf7bn97JnE4A2d+1fxn3FA==,type:str]
-  FORCE_PASSWORD: ENC[AES256_GCM,data:zNJiLcUbgrqfDA==,iv:kmHK/8KZ7ojvZ8GXl1QTRv21C4KTozfaIrtqCZR+s1Q=,tag:7Rz9EyglP1EQqMdd3lJ5sw==,type:str]
+  AUTOPULSE__AUTH__USERNAME: ENC[AES256_GCM,data:/C7HyFGvI9U=,iv:vOOZ/5GxQMH3x79ONSNQSt2D/MhUwARNuT30xl8jbGY=,tag:Ql18ZJB0PGJwpXzJbTThAQ==,type:str]
+  AUTOPULSE__AUTH__PASSWORD: ENC[AES256_GCM,data:AOgWH2O6CCdaZA==,iv:KzMPovgqAA/QlXhsZL6F1BoL+GaKomkTu4oDvEhdX6Q=,tag:42it02JKy21KP54F7nWBKw==,type:str]
+  AUTOPULSE__TARGETS__PLEX__TOKEN: ENC[AES256_GCM,data:DPYETTL1cG7u5MOq20bzjbTXv0o=,iv:8NHtJvq2XuNd7HrLxlvfsnFwOhId0x7hn3N7JfnxkTs=,tag:LTgDvumFCf9QZVlW6qFt2w==,type:str]
+  FORCE_USERNAME: ENC[AES256_GCM,data:GuDYWrxebEY=,iv:S/C1e3hEzcgM/qJTKKk7ucC/hi2t4faXTO/QA+8FI0A=,tag:QXw8S0CPQVx1ROV8Fw6Qdg==,type:str]
+  FORCE_PASSWORD: ENC[AES256_GCM,data:p/xE8NYrEBCcZw==,iv:v32ztb4+TJcQxv0C1klcBOZENijFgGGBh1CQAFSPkaE=,tag:L4+B0meAGrLdmAHBpBH1LA==,type:str]
 sops:
   age:
     - recipient: age1qneprk3zf33h2kjfhmqnnf72kxkj9fplnnkmg26xwp9nx2njtfns2v9mte
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWRzFvOGJPQkh0UjNHRENH
-        d2szL25qWTBBejJySktDWVBXcSsweitSTVNrCkRkU2t6RjR3Sy9sekYwNzkrQWFn
-        QXBRWlNSVjMvY3JkMlJST2REckhnY2cKLS0tIHB6ZzZ1Q2NjelZuQnlMSmZHZXlr
-        TmxWSkhjaU5Ga1psdUlpMWRhWEQwb28Kq2zFR6Nq685RJbZW6Yk37cyZc2c1MVt0
-        /Fr9AGrIfC44rDvK/KXAfds1X6rFhSlIlamsMB7ITfCs5WimlMZekA==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5bWZ0TS9aRWE5WFVjYm5R
+        cGpITXFQMU9GT2hXRStUWGpSanQvMEUxS1dvCjVXWVNuenZLR1NsZm04ajZya2Uy
+        YW5FV1RRZ1k1RnpydW9LMkljek9NeWcKLS0tIFZuNVhqSUI5MDBWUXV4VUZ6MFdO
+        OCt3RW1XYzZtNVlZb09GOVVvQnNJVWMKogjsIoa1TU7judaV82XyRlWcsMHhMXzu
+        YVAKQvkCLxZZwE57vNhMQZ1T4FpSOeZK02aFPTfSeLF+OLG1rNknNA==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-12-02T05:57:08Z"
-  mac: ENC[AES256_GCM,data:963jxDS/ctQKExq/JzHG4Y2MQQD1BaIo2AeMJU+N240bKdIhK05qjY9kYyUAJNdsDL3Fy1AbX4QvkVfieJ2BKtu5wzXFV3cvcr/iC9QzcPB8CK5yDAXVCyOUBpbpOZMf+ApQzjrFKtks4ZDkNGHempXGfIWvp5Ozug4siiir6S0=,iv:qjK5PCpdnPt+Vu+5joefEPdsOvgTxAId25Uw3y8+cEo=,tag:+w63oBaxvipEzlVARoqgJA==,type:str]
+  lastmodified: "2025-12-02T07:01:50Z"
+  mac: ENC[AES256_GCM,data:fKpV2n0nbMMNfBHOdHn/UyrTR3wzNQ/kSgFxc12Hg45NYu1Xxqoz+CnsNLCfwODqiTLrPZ0Y1JeQo9DPcAxN6vub4K49u/s5u12/GhWd1KjMXDF5UFXDI0qg+gt1OBed1uje8n+MmhjfQvJF+MPYoqVfbVmsLy/jjWXhXn/3R58=,iv:A1PhatYHliPOFGrWn3E7hY8RL92sacRKsf7OkdLCLSE=,tag:XLuj4p1lDjo5YrTzKGVo5Q==,type:str]
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
   version: 3.11.0
