--- a/kubernetes/apps/downloads/kustomization.yaml
+++ b/kubernetes/apps/downloads/kustomization.yaml
@@ -12,7 +12,7 @@ resources:
 - ./bazarr/ks.yaml
 - ./coder/ks.yaml
 #   - ./lidarr/ks.yaml
-#   - ./maintainerr/ks.yaml
+- ./maintainerr/ks.yaml
 - ./overseerr/ks.yaml
 - ./prowlarr/ks.yaml
 - ./radarr/ks.yaml
