Guess it works only in a secret?

--- a/kubernetes/apps/media/autopulse/app/secret.sops.yaml
+++ b/kubernetes/apps/media/autopulse/app/secret.sops.yaml
@@ -4,24 +4,25 @@ metadata:
   name: autopulse-secret
 type: Opaque
 stringData:
-  AUTOPULSE__AUTH__USERNAME: ENC[AES256_GCM,data:/C7HyFGvI9U=,iv:vOOZ/5GxQMH3x79ONSNQSt2D/MhUwARNuT30xl8jbGY=,tag:Ql18ZJB0PGJwpXzJbTThAQ==,type:str]
-  AUTOPULSE__AUTH__PASSWORD: ENC[AES256_GCM,data:AOgWH2O6CCdaZA==,iv:KzMPovgqAA/QlXhsZL6F1BoL+GaKomkTu4oDvEhdX6Q=,tag:42it02JKy21KP54F7nWBKw==,type:str]
-  AUTOPULSE__TARGETS__PLEX__TOKEN: ENC[AES256_GCM,data:DPYETTL1cG7u5MOq20bzjbTXv0o=,iv:8NHtJvq2XuNd7HrLxlvfsnFwOhId0x7hn3N7JfnxkTs=,tag:LTgDvumFCf9QZVlW6qFt2w==,type:str]
-  FORCE_USERNAME: ENC[AES256_GCM,data:GuDYWrxebEY=,iv:S/C1e3hEzcgM/qJTKKk7ucC/hi2t4faXTO/QA+8FI0A=,tag:QXw8S0CPQVx1ROV8Fw6Qdg==,type:str]
-  FORCE_PASSWORD: ENC[AES256_GCM,data:p/xE8NYrEBCcZw==,iv:v32ztb4+TJcQxv0C1klcBOZENijFgGGBh1CQAFSPkaE=,tag:L4+B0meAGrLdmAHBpBH1LA==,type:str]
+  AUTOPULSE__AUTH__USERNAME: ENC[AES256_GCM,data:tAPfZbQ1MZ8=,iv:SQpPaw/JWRYqTFItrF3aGa91quVgQSwEdAQExCZkWtM=,tag:ehkohKpttb0GH5SSHdJ9tQ==,type:str]
+  AUTOPULSE__AUTH__PASSWORD: ENC[AES256_GCM,data:SEJrhb0VFCBaCQ==,iv:8NgEFaUV0sucgtOcEVktnt/HCC7wwf2ON8EEdAAWCPY=,tag:epfcutP6uxFauWsRLTd+Tw==,type:str]
+  AUTOPULSE__TARGETS__PLEX__TOKEN: ENC[AES256_GCM,data:RRu0BiWP/2fx/uaO73HyH7IH43U=,iv:Bm/H2T+JXKqjmGSItsP7C72R2ebVoq4tgCcky7gc63k=,tag:IvoO5cy+oXFVU/tWXLLOAg==,type:str]
+  AUTOPULSE__TARGETS__PLEX__URL: ENC[AES256_GCM,data:u5dCCa1+zw2hBaiGjTJOwOI79LAHl4FOcuaeWOSIGbxxxIMDelRrMjw=,iv:NZPjPVJhYukm1IW9QtNhsGdN1cVMwsOgBAG6IUgNa1A=,tag:X4CQvrhv1SEfwuDHSZCJRg==,type:str]
+  FORCE_USERNAME: ENC[AES256_GCM,data:MKb1YfIuuzM=,iv:ri78I4z4XN+tWF3bopPRI+YJ639Rqlb9sXLpA7POB44=,tag:ytN3/IfpUY4rHsBtpad2pw==,type:str]
+  FORCE_PASSWORD: ENC[AES256_GCM,data:A/JtJlux4OI1YQ==,iv:cN7Xj6IE9583P3bDna6j2cmC5LvXLT4kKj4D5ru09qU=,tag:cXQrVc83w6FA3+RDcNkCEQ==,type:str]
 sops:
   age:
     - recipient: age1qneprk3zf33h2kjfhmqnnf72kxkj9fplnnkmg26xwp9nx2njtfns2v9mte
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5bWZ0TS9aRWE5WFVjYm5R
-        cGpITXFQMU9GT2hXRStUWGpSanQvMEUxS1dvCjVXWVNuenZLR1NsZm04ajZya2Uy
-        YW5FV1RRZ1k1RnpydW9LMkljek9NeWcKLS0tIFZuNVhqSUI5MDBWUXV4VUZ6MFdO
-        OCt3RW1XYzZtNVlZb09GOVVvQnNJVWMKogjsIoa1TU7judaV82XyRlWcsMHhMXzu
-        YVAKQvkCLxZZwE57vNhMQZ1T4FpSOeZK02aFPTfSeLF+OLG1rNknNA==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqL2xGZlJ0M0J3MVVhbzZT
+        eTNYVHRSNjJPbXZlOHJXdytnRytNWWdxTFdJCjhlYmpKNTdPMCsyYUpPUkUwaWEy
+        ZW82TDAvbE5hZFlDakJXTEZXeDVaMncKLS0tIEdndHE3QlVKSlFtZkh5WWhKOStJ
+        MmJ0UG10YzZVNVc5RGlXcCs0K28wVzQKKC2mxKrT14Jsw0IBkT3wKWwU35fAKCv7
+        8DSjPOjRbuaK5vC43nltwEcHKUJI2oKEUhy50tlkFALAX7sw4Rnfyw==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-12-02T07:01:50Z"
-  mac: ENC[AES256_GCM,data:fKpV2n0nbMMNfBHOdHn/UyrTR3wzNQ/kSgFxc12Hg45NYu1Xxqoz+CnsNLCfwODqiTLrPZ0Y1JeQo9DPcAxN6vub4K49u/s5u12/GhWd1KjMXDF5UFXDI0qg+gt1OBed1uje8n+MmhjfQvJF+MPYoqVfbVmsLy/jjWXhXn/3R58=,iv:A1PhatYHliPOFGrWn3E7hY8RL92sacRKsf7OkdLCLSE=,tag:XLuj4p1lDjo5YrTzKGVo5Q==,type:str]
+  lastmodified: "2025-12-02T07:08:04Z"
+  mac: ENC[AES256_GCM,data:E8CtgScENHuuL+A9cHq4aHd39ENXiBjhfwqrVn5550Ve+Qt/9YPvFtvfwRM65YFaAqANWlVrMAuFfRYw7ht3+JLpia10sEvKHQnHW8Mn1qRSsP5gyhnGgk82te9i3HRuVv2qrRb5Anp/93Yi/MfGPbeVG35ChQBH5oq2oWPswS8=,iv:Rxr37eK0J+Sqg85F0JiOJCgxJYaK4M8qctIUCNa0AVE=,tag:ZdYwmuA3PsN1LHy1s3Aypg==,type:str]
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
   version: 3.11.0
