--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -12,5 +12,5 @@ resources:
 - ./autopulse/ks.yaml
 - ./kometa/ks.yaml
 - ./plex/ks.yaml
-# - ./plex-auto-languages/ks.yaml
+- ./plex-auto-languages/ks.yaml
 - ./tautulli/ks.yaml
